Refactor: Premium design overhaul with new design system and assets

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         </div>
 
         <figure class="hero-image" data-reveal>
-          <img src="https://images.unsplash.com/photo-1545235617-9465d2a55698?auto=format&fit=crop&w=1400&q=80"
-            alt="Craft workshop desk with plans and tools" loading="eager" decoding="async" />
-          <figcaption>Recent launch: Ashborne Metalworks</figcaption>
+          <img src="/hero-abstract.png" alt="Abstract architectural composition representing precision and craft"
+            loading="eager" decoding="async" />
+          <figcaption>Studio concept: Structure &amp; Void</figcaption>
         </figure>
       </div>
 
@@ -174,8 +174,7 @@
 
         <div class="work-secondary">
           <article class="work-card" data-reveal>
-            <img
-              src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?auto=format&fit=crop&w=1200&q=80"
+            <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?auto=format&fit=crop&w=1200&q=80"
               alt="Material library and stone textures" loading="lazy" decoding="async" />
             <div class="work-meta">
               <p>Stone + Surface</p>
@@ -183,8 +182,7 @@
             </div>
           </article>
           <article class="work-card" data-reveal>
-            <img
-              src="https://images.unsplash.com/photo-1462556791646-c201b8241a94?auto=format&fit=crop&w=1200&q=80"
+            <img src="https://images.unsplash.com/photo-1462556791646-c201b8241a94?auto=format&fit=crop&w=1200&q=80"
               alt="Fabrication workshop website hero" loading="lazy" decoding="async" />
             <div class="work-meta">
               <p>Fabrication Studio</p>
