Pivot: Re-orient business focus to architectural fabrication and master craftsmanship

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tradesman Atelier — Websites for Serious Craft Businesses</title>
+  <title>Tradesman Atelier — Architectural Fabrication & Custom Building</title>
   <meta name="description"
-    content="Tradesman Atelier designs and builds distinct, high-performing websites for premium trades, fabrication, and craft-driven businesses." />
-  <meta name="theme-color" content="#f2f0ea" />
-  <meta property="og:title" content="Tradesman Atelier — Websites for Serious Craft Businesses" />
+    content="Tradesman Atelier is an architectural fabrication studio and high-end building firm specializing in bespoke timber, metal, and concrete works." />
+  <meta name="theme-color" content="#f4f2ec" />
+  <meta property="og:title" content="Tradesman Atelier — Architectural Fabrication & Custom Building" />
   <meta property="og:description"
-    content="A strategy-led studio creating polished, high-conversion websites for builders, fabricators, and craft brands." />
+    content="A master craftsman studio creating distinct, architectural elements and premium custom homes." />
   <meta property="og:type" content="website" />
-  <meta property="og:image"
-    content="https://images.unsplash.com/photo-1545235617-9465d2a55698?auto=format&fit=crop&w=1600&q=80" />
+  <meta property="og:image" content="/craftsman-hero.png" />
   <meta property="twitter:card" content="summary_large_image" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,12 +24,12 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "ProfessionalService",
+      "@type": "HomeAndConstructionBusiness",
       "name": "Tradesman Atelier",
-      "description": "Web design and front-end implementation for premium trades and craft businesses.",
+      "description": "Architectural fabrication and high-end custom building for premium residential and commercial projects.",
       "url": "https://tradesmanatelier.com",
       "areaServed": "Worldwide",
-      "serviceType": "Web Design"
+      "serviceType": "Architectural Fabrication"
     }
   </script>
 </head>
@@ -53,15 +52,15 @@
 
       <nav class="site-nav" id="site-nav" data-nav>
         <ul>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#work">Work</a></li>
-          <li><a href="#process">Process</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#services">Capabilities</a></li>
+          <li><a href="#work">Portfolio</a></li>
+          <li><a href="#process">The Method</a></li>
+          <li><a href="#about">The Studio</a></li>
+          <li><a href="#contact">Inquiry</a></li>
         </ul>
       </nav>
 
-      <a href="#contact" class="header-cta">Book Intro Call</a>
+      <a href="#contact" class="header-cta">Begin a project</a>
     </div>
   </header>
 
@@ -69,88 +68,91 @@
     <section class="hero" id="home">
       <div class="container">
         <div class="hero-spec" data-reveal>
-          <span>Web Design</span>
-          <span>For Serious Trades</span>
+          <span>Established 2014</span>
+          <span>Bespoke Architectural Build</span>
         </div>
         <h1 data-reveal>
-          Websites built for trades that close real work.
+          Monuments to <br>precise craftsmanship.
         </h1>
       </div>
 
       <div class="container hero-split">
         <div class="hero-copy" data-reveal>
           <p class="hero-lead">
-            We design and build premium websites for builders, fabrication studios, and skilled trades teams who are
-            tired of looking like everyone else.
+            We are a high-end fabrication studio and building firm. We partner with architects and homeowners to execute
+            the most demanding physical details in timber, steel, and stone.
           </p>
           <div class="hero-actions">
             <a href="#contact" class="btn btn-primary">Start a Project</a>
-            <a href="#work" class="btn btn-secondary">See Work</a>
+            <a href="#work" class="btn btn-secondary">View Work</a>
           </div>
         </div>
 
         <figure class="hero-image" data-reveal>
-          <img src="/hero-abstract.png" alt="Abstract architectural composition representing precision and craft"
+          <img src="/craftsman-hero.png" alt="Close-up of master craftsman assembly timber joinery on a workshop table"
             loading="eager" decoding="async" />
-          <figcaption>Studio concept: Structure &amp; Void</figcaption>
+          <figcaption>Studio Profile: Master joinery in Black Walnut</figcaption>
         </figure>
       </div>
 
       <div class="container">
         <ul class="hero-stats" data-reveal>
           <li>
-            <strong data-counter data-counter-value="127" data-counter-suffix="+">127+</strong>
-            <span>projects delivered</span>
+            <strong data-counter data-counter-value="142" data-counter-suffix="">142</strong>
+            <span>projects completed</span>
           </li>
           <li>
-            <strong data-counter data-counter-value="38" data-counter-suffix="%">38%</strong>
-            <span>avg lift in qualified leads</span>
+            <strong data-counter data-counter-value="12" data-counter-suffix="">12</strong>
+            <span>years of craft</span>
           </li>
           <li>
-            <strong data-counter data-counter-value="1.4" data-counter-decimals="1"
-              data-counter-suffix="s">1.4s</strong>
-            <span>typical load time</span>
+            <strong data-counter data-counter-value="0" data-counter-decimals="0"
+              data-counter-suffix=" tolerance">0</strong>
+            <span>compromise mindset</span>
           </li>
         </ul>
       </div>
     </section>
 
-    <section class="client-rail" aria-label="Selected client types">
+    <section class="client-rail" aria-label="Our core disciplines">
       <div class="container">
         <ul>
-          <li>Custom Home Builders</li>
-          <li>Architectural Fabricators</li>
-          <li>Millwork Studios</li>
-          <li>Design-Build Firms</li>
-          <li>Luxury Renovation Teams</li>
+          <li>Fine Woodworking</li>
+          <li>Custom Architectural Metalwork</li>
+          <li>Design-Build Construction</li>
+          <li>Material Innovation</li>
+          <li>Structural Restoration</li>
         </ul>
       </div>
     </section>
 
     <section class="services" id="services">
       <div class="container">
-        <div class="section-label" data-reveal>What we do</div>
+        <div class="section-label" data-reveal>Capabilities</div>
 
         <dl class="service-list">
           <div class="service-list-item" data-reveal>
             <span class="service-idx" aria-hidden="true">01</span>
-            <dt>Positioning + Messaging</dt>
-            <dd>Clarify what you do, who you serve, and why your work commands premium fees.</dd>
+            <dt>Architectural Woodwork</dt>
+            <dd>From complex timber frame structures to seamless millwork and bespoke furniture installations.</dd>
           </div>
           <div class="service-list-item" data-reveal>
             <span class="service-idx" aria-hidden="true">02</span>
-            <dt>Visual Direction</dt>
-            <dd>A distinct look and art direction that feels bespoke to your business, not copied from trends.</dd>
+            <dt>Custom Metal Fabrication</dt>
+            <dd>Structural steel, architectural hardware, and hand-burnished patinas for residential and commercial
+              environments.</dd>
           </div>
           <div class="service-list-item" data-reveal>
             <span class="service-idx" aria-hidden="true">03</span>
-            <dt>Front-End Build</dt>
-            <dd>Fast, accessible, responsive implementation that performs well and holds up in production.</dd>
+            <dt>High-End General Contracting</dt>
+            <dd>We manage and execute full-scale residential builds with a focus on uncompromising physical quality.
+            </dd>
           </div>
           <div class="service-list-item" data-reveal>
             <span class="service-idx" aria-hidden="true">04</span>
-            <dt>Launch Support</dt>
-            <dd>Handoff, QA, and practical guidance so your team can maintain and grow without friction.</dd>
+            <dt>Design Consultation</dt>
+            <dd>Early-stage material advice and technical drafting to ensure complex designs are buildable and durable.
+            </dd>
           </div>
         </dl>
       </div>
@@ -159,34 +161,34 @@
     <section class="work" id="work">
       <div class="container">
         <div class="work-header" data-reveal>
-          <h2 class="work-heading">Selected Work</h2>
-          <span class="work-count">03 Projects</span>
+          <h2 class="work-heading">Selected Portfolio</h2>
+          <span class="work-count">Featured Works</span>
         </div>
 
         <article class="work-card work-card--featured" data-reveal>
-          <img src="https://images.unsplash.com/photo-1519710164239-da123dc03ef4?auto=format&fit=crop&w=1500&q=80"
-            alt="Modern architecture website layout" loading="lazy" decoding="async" />
+          <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1500&q=80"
+            alt="Modern architecturally designed timber house" loading="lazy" decoding="async" />
           <div class="work-meta">
-            <p>Residential Construction</p>
-            <h3>Ridgepoint Homes</h3>
+            <p>Design-Build</p>
+            <h3>The Boulder Creek Residence</h3>
           </div>
         </article>
 
         <div class="work-secondary">
           <article class="work-card" data-reveal>
-            <img src="https://images.unsplash.com/photo-1497366412874-3415097a27e7?auto=format&fit=crop&w=1200&q=80"
-              alt="Material library and stone textures" loading="lazy" decoding="async" />
+            <img src="https://images.unsplash.com/photo-1513519245088-0e12902e5a38?auto=format&fit=crop&w=1200&q=80"
+              alt="Custom metal staircase in modern home" loading="lazy" decoding="async" />
             <div class="work-meta">
-              <p>Stone + Surface</p>
-              <h3>Altair Stone</h3>
+              <p>Metal Fabrication</p>
+              <h3>Helix Steel Staircase</h3>
             </div>
           </article>
           <article class="work-card" data-reveal>
-            <img src="https://images.unsplash.com/photo-1462556791646-c201b8241a94?auto=format&fit=crop&w=1200&q=80"
-              alt="Fabrication workshop website hero" loading="lazy" decoding="async" />
+            <img src="https://images.unsplash.com/photo-1541888941257-2342df88022d?auto=format&fit=crop&w=1200&q=80"
+              alt="Detail of Japanese joinery" loading="lazy" decoding="async" />
             <div class="work-meta">
-              <p>Fabrication Studio</p>
-              <h3>Forge &amp; Grain</h3>
+              <p>Fine Joinery</p>
+              <h3>Kyoto-Inspired Guest Suite</h3>
             </div>
           </article>
         </div>
@@ -198,8 +200,9 @@
         <blockquote class="pull-quote" data-reveal>
           <span class="quote-glyph" aria-hidden="true">&ldquo;</span>
           <div class="quote-content">
-            <p>They understood what we needed before we could articulate it. The site pays for itself every quarter.</p>
-            <cite>Marcus Caldwell, Ridgepoint Homes</cite>
+            <p>Their attention to detail isn't just a marketing phrase—it is visible in every joint and every weld.
+              Truly world-class craft.</p>
+            <cite>Julian Thorne, Lead Architect at Thorne &amp; Associates</cite>
           </div>
         </blockquote>
       </div>
@@ -207,34 +210,34 @@
 
     <section class="process" id="process">
       <div class="container">
-        <div class="section-label section-label--light" data-reveal>How we work</div>
+        <div class="section-label section-label--light" data-reveal>The Method</div>
         <ol class="process-list">
           <li data-reveal>
             <span class="process-num">01</span>
             <div>
-              <h3>Discovery</h3>
-              <p>Business goals, audience, services, and positioning foundation.</p>
+              <h3>Drafting</h3>
+              <p>High-fidelity technical drawings and material sourcing Strategy.</p>
             </div>
           </li>
           <li data-reveal>
             <span class="process-num">02</span>
             <div>
-              <h3>Direction</h3>
-              <p>Wireframes and visual design grounded in your market and offer.</p>
+              <h3>Fabrication</h3>
+              <p>Precise workshop execution using traditional methods and modern tech.</p>
             </div>
           </li>
           <li data-reveal>
             <span class="process-num">03</span>
             <div>
-              <h3>Build</h3>
-              <p>Responsive implementation, QA, and content polish.</p>
+              <h3>Installation</h3>
+              <p>Surgical site integration and final finishing on-location.</p>
             </div>
           </li>
           <li data-reveal>
             <span class="process-num">04</span>
             <div>
-              <h3>Launch</h3>
-              <p>Final checks, deployment, and handoff documentation.</p>
+              <h3>Maintenance</h3>
+              <p>Long-term care documentation to ensure the craft ages gracefully.</p>
             </div>
           </li>
         </ol>
@@ -245,10 +248,10 @@
       <div class="container about-layout">
         <div class="about-accent" aria-hidden="true"></div>
         <div class="about-content" data-reveal>
-          <h2 class="about-statement">We believe trust is a design outcome.</h2>
+          <h2 class="about-statement">A studio built on the obsession of detail.</h2>
           <p class="about-body">
-            When someone lands on your site, they make a judgment in seconds. We design for that moment with clear
-            structure, intentional typography, and copy that sounds like an expert wrote it.
+            At Tradesman Atelier, we believe the best work happens when the thinking and the doing are inseparable. Our
+            studio is or workshop—where every project is handled by master builders, not account managers.
           </p>
         </div>
       </div>
@@ -257,8 +260,9 @@
     <section class="contact" id="contact">
       <div class="container contact-layout">
         <div data-reveal>
-          <h2 class="contact-heading">Tell us what you're building.</h2>
-          <p class="contact-sub">We'll send back a practical recommendation with scope, timeline, and next step.</p>
+          <h2 class="contact-heading">Discuss your next commission.</h2>
+          <p class="contact-sub">Directly connect with our studio leads to discuss architectural details, custom builds,
+            or complex fabrications.</p>
         </div>
 
         <form class="contact-form" data-inquiry-form novalidate data-reveal>
@@ -273,17 +277,17 @@
           </div>
 
           <div class="form-field">
-            <label for="company">Company</label>
+            <label for="company">Firm / Project Name</label>
             <input id="company" name="company" type="text" autocomplete="organization" required />
           </div>
 
           <div class="form-field">
-            <label for="project">Project Brief</label>
+            <label for="project">The Brief</label>
             <textarea id="project" name="project" rows="4" required
-              placeholder="What are you trying to improve with the new site?"></textarea>
+              placeholder="Tell us about the project, materials, and timeline."></textarea>
           </div>
 
-          <button class="btn btn-primary" type="submit">Send Inquiry</button>
+          <button class="btn btn-primary" type="submit">Submit Inquiry</button>
           <p class="form-status" data-form-status role="status" aria-live="polite"></p>
         </form>
       </div>
@@ -292,9 +296,9 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>&copy; 2026 Tradesman Atelier.</p>
+      <p>&copy; 2026 Tradesman Atelier. Master Builders & Fabricators.</p>
       <div>
-        <a href="mailto:hello@tradesmanatelier.com">hello@tradesmanatelier.com</a>
+        <a href="mailto:studio@tradesmanatelier.com">studio@tradesmanatelier.com</a>
       </div>
     </div>
   </footer>
